--- a/packages/markprompt-react/package.json
+++ b/packages/markprompt-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "markprompt",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A React component for adding GPT-4 powered search using the Markprompt API.",
   "main": "dist/index.cjs",
   "typings": "dist/index.d.ts",
@@ -38,27 +38,32 @@
     "react-dom": "^16 || ^17 || ^18"
   },
   "devDependencies": {
+    "@swc/core": "^1.2.131",
+    "@swc/jest": "^0.2.17",
+    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.0",
+    "@types/node": "^14.14.22",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "classnames": "^2.3.2",
     "esbuild": "^0.17.8",
     "fast-glob": "^3.2.12",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "rimraf": "^3.0.2",
-    "snapshot-diff": "^0.8.1",
-    "tslib": "^2.3.1",
-    "typescript": "^4.9.5",
-    "@swc/core": "^1.2.131",
-    "@swc/jest": "^0.2.17",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@types/node": "^14.14.22",
     "husky": "^4.3.8",
     "jest": "26",
     "lint-staged": "^12.2.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.6.2",
-    "prettier-plugin-tailwindcss": "^0.1.4"
+    "prettier-plugin-tailwindcss": "^0.1.4",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-markdown": "^8.0.6",
+    "remark-gfm": "^3.0.1",
+    "rimraf": "^3.0.2",
+    "snapshot-diff": "^0.8.1",
+    "tslib": "^2.3.1",
+    "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "client-only": "^0.0.1"
   }
 }
