--- a/packages/markprompt-react/package.json
+++ b/packages/markprompt-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "markprompt",
-  "version": "0.1.3",
+  "version": "0.1.5",
   "description": "A React component for adding GPT-4 powered search using the Markprompt API.",
   "main": "dist/index.cjs",
   "typings": "dist/index.d.ts",
@@ -45,7 +45,6 @@
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
-    "classnames": "^2.3.2",
     "esbuild": "^0.17.8",
     "fast-glob": "^3.2.12",
     "husky": "^4.3.8",
@@ -56,14 +55,15 @@
     "prettier-plugin-tailwindcss": "^0.1.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-markdown": "^8.0.6",
-    "remark-gfm": "^3.0.1",
     "rimraf": "^3.0.2",
     "snapshot-diff": "^0.8.1",
     "tslib": "^2.3.1",
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "client-only": "^0.0.1"
+    "classnames": "^2.3.2",
+    "client-only": "^0.0.1",
+    "react-markdown": "^8.0.6",
+    "remark-gfm": "^3.0.1"
   }
 }
