--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "js-md5": "^0.7.3",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.0",
+    "jszip": "^3.10.1",
     "lodash-es": "^4.17.21",
     "nanoid": "^4.0.1",
     "next": "13.2.3",
