--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@markdoc/markdoc": "^0.2.2",
+    "@markdoc/next.js": "^0.2.2",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.2.4",
@@ -22,6 +23,7 @@
     "@radix-ui/react-select": "^1.2.1",
     "@radix-ui/react-slider": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.0.3",
+    "@reach/rect": "^0.18.0",
     "@sindresorhus/slugify": "^2.2.0",
     "@stripe/stripe-js": "^1.49.0",
     "@supabase/auth-helpers-nextjs": "^0.5.6",
@@ -61,6 +63,7 @@
     "lodash-es": "^4.17.21",
     "nanoid": "^4.0.1",
     "next": "13.2.3",
+    "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "octokit": "^2.0.14",
     "openai": "^3.2.1",
