--- a/example.env
+++ b/example.env
@@ -13,3 +13,5 @@ NEXT_PUBLIC_PLAIN_APP_KEY=
 PLAIN_SECRET_KEY=
 NEXT_PUBLIC_APP_HOSTNAME=
 NEXT_PUBLIC_SUPPORT_EMAIL=
+MOTIF_DOCS_PAGE_ID=
+MARKPROMPT_WEBSITE_PROJECT_KEY=
