--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "next-themes": "^0.2.1",
     "octokit": "^2.0.14",
     "openai": "^3.2.1",
+    "p-limit": "^4.0.0",
     "pako": "^2.1.0",
     "prism-react-renderer": "^1.3.5",
     "react": "18.2.0",
