--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-popover": "^1.0.5",
     "@radix-ui/react-select": "^1.2.1",
     "@radix-ui/react-slider": "^1.1.1",
+    "@radix-ui/react-switch": "^1.0.2",
     "@radix-ui/react-toggle-group": "^1.0.3",
     "@reach/rect": "^0.18.0",
     "@sindresorhus/slugify": "^2.2.0",
