--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@visx/responsive": "^2.10.0",
     "@visx/scale": "^2.2.2",
     "@visx/tooltip": "^2.10.0",
+    "ajv": "^8.12.0",
     "axios": "^1.3.4",
     "canvas-confetti": "^1.6.0",
     "classnames": "^2.3.2",
@@ -63,6 +64,7 @@
     "jsonwebtoken": "^9.0.0",
     "jszip": "^3.10.1",
     "lodash-es": "^4.17.21",
+    "minimatch": "^8.0.3",
     "nanoid": "^4.0.1",
     "next": "13.2.3",
     "next-mdx-remote": "^4.4.1",
