Fix eslint errors

--- a/package.json
+++ b/package.json
@@ -101,10 +101,13 @@
     "@types/lodash-es": "^4.17.7",
     "@types/ms": "0.7.31",
     "@types/node": "18.14.6",
+    "@types/pako": "^2.0.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/turndown": "^5.0.1",
     "@types/unzipper": "^0.10.5",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
     "@vercel/git-hooks": "1.0.0",
     "autoprefixer": "10.4.13",
     "lint-staged": "13.1.0",
