--- a/package.json
+++ b/package.json
@@ -110,6 +110,8 @@
     "@typescript-eslint/parser": "^5.57.1",
     "@vercel/git-hooks": "1.0.0",
     "autoprefixer": "10.4.13",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-import": "^2.27.5",
     "lint-staged": "13.1.0",
     "postcss": "8.4.20",
     "prettier": "2.8.1",
