Replace lint command

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint . --quiet"
   },
   "dependencies": {
     "@markdoc/markdoc": "^0.2.2",
