Add module field

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "type": "module",
   "main": "index.js",
+  "module": "index.js",
   "types": "index.d.ts",
   "typings": "index.d.ts",
   "scripts": {
