--- a/package.json
+++ b/package.json
@@ -116,6 +116,8 @@
     "autoprefixer": "10.4.13",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-lit": "^1.8.2",
+    "eslint-plugin-wc": "^1.4.0",
     "lint-staged": "13.1.0",
     "npm-run-all": "^4.1.5",
     "postcss": "8.4.20",
