--- a/packages/dom/package.json
+++ b/packages/dom/package.json
@@ -1,12 +1,28 @@
 {
   "name": "@markprompt/dom",
-  "version": "0.1.0",
-  "type": "module",
-  "license": "MIT",
+  "version": "0.2.0",
+  "description": "Vanilla JavaScript version of the Markprompt client library",
+  "main": "index.js",
+  "scripts": {
+    "build": "npx tsc -b",
+    "dev": "npx tsc -b -w"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/motifland/markprompt.git",
-    "directory": "packages/dom"
+    "url": "github.com/motifland/markprompt"
   },
-  "sideEffects": false
+  "author": "Motif.land",
+  "license": "MIT",
+  "dependencies": {
+    "lit": "^2.7.2",
+    "rehype-sanitize": "^5.0.1",
+    "rehype-stringify": "^9.0.3",
+    "remark-gfm": "^3.0.1",
+    "remark-parse": "^10.0.1",
+    "remark-rehype": "^10.1.0",
+    "unified": "^10.1.2"
+  },
+  "devDependencies": {
+    "typescript": "^5.0.4"
+  }
 }
