--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,20 +1,34 @@
 {
   "name": "@markprompt/web",
-  "version": "0.2.1",
-  "description": "Prompt web component for Markprompt",
-  "main": "index.js",
-  "license": "MIT",
+  "version": "0.2.2-beta27",
+  "description": "A web component for adding GPT-4 powered search using the Markprompt API.",
   "author": "Motif",
+  "main": "dist/index.cjs",
+  "typings": "dist/index.d.ts",
+  "module": "dist/markprompt.esm.js",
+  "license": "MIT",
+  "type": "module",
+  "files": [
+    "README.md",
+    "dist"
+  ],
+  "exports": {
+    "import": "./dist/markprompt.esm.js",
+    "require": "./dist/index.cjs",
+    "types": "./dist/index.d.ts"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/motifland/markprompt.git",
     "directory": "packages/web"
   },
-  "type": "module",
-  "module": "index.js",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
-    "build": "npx tsc -b",
-    "dev": "npx tsc -b -w"
+    "dev": "npx tsc -b -w",
+    "build": "./scripts/build.sh --external:react --external:react-dom",
+    "vite": "vite"
   },
   "dependencies": {
     "@markprompt/core": "0.2.0",
@@ -27,6 +41,7 @@
     "unified": "^10.1.2"
   },
   "devDependencies": {
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "vite": "^4.2.0"
   }
 }
