--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "markprompt-core",
   "version": "0.1.0",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -118,6 +121,6 @@
     "prettier": "2.8.1",
     "prettier-plugin-tailwindcss": "0.2.1",
     "tailwindcss": "3.2.4",
-    "typescript": "4.9.4"
+    "typescript": "^4.9.4"
   }
 }
