--- a/packages/markprompt-react/package.json
+++ b/packages/markprompt-react/package.json
@@ -44,8 +44,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "rimraf": "^3.0.2",
-    "tslib": "^2.3.1",
-    "typescript": "^4.9.5"
+    "tslib": "^2.3.1"
   },
   "dependencies": {
     "classnames": "^2.3.2",
