--- a/packages/markprompt-react/package.json
+++ b/packages/markprompt-react/package.json
@@ -34,15 +34,11 @@
     "clean": "rimraf ./dist"
   },
   "peerDependencies": {
-    "react": "^16 || ^17 || ^18",
-    "react-dom": "^16 || ^17 || ^18"
+    "react": "^16 || ^17 || ^18"
   },
   "devDependencies": {
-    "@types/react": "^17.0.43",
-    "@types/react-dom": "^17.0.14",
     "esbuild": "^0.17.8",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
     "rimraf": "^3.0.2",
     "tslib": "^2.3.1"
   },
