Convert core to TypeScript

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,12 +8,13 @@
     "directory": "packages/core"
   },
   "type": "module",
-  "main": "index.js",
-  "module": "index.js",
-  "types": "index.d.ts",
-  "typings": "index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "typings": "dist/index.d.ts",
   "sideEffects": false,
   "scripts": {
-    "build": "tsc -b tsconfig.json"
+    "build": "tsc -b tsconfig.json",
+    "dev": "tsc -b tsconfig.json -w"
   }
 }
