--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,46 +1,32 @@
 {
-  "name": "markprompt",
+  "name": "@markprompt/react",
   "version": "0.1.7",
   "description": "A React component for adding GPT-4 powered search using the Markprompt API.",
-  "main": "dist/index.cjs",
-  "typings": "dist/index.d.ts",
-  "module": "dist/markprompt.esm.js",
+  "main": "./dist/index.js",
   "license": "MIT",
   "files": [
     "README.md",
     "dist"
   ],
-  "exports": {
-    "import": "./dist/markprompt.esm.js",
-    "require": "./dist/index.cjs",
-    "types": "./dist/index.d.ts"
-  },
+  "exports": "./dist/index.js",
   "type": "module",
   "sideEffects": false,
-  "engines": {
-    "node": ">=10"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/motifland/markprompt.git",
-    "directory": "packages/markprompt-react"
+    "directory": "packages/react"
   },
   "publishConfig": {
     "access": "public"
   },
   "scripts": {
-    "prepublishOnly": "npm run build",
-    "build": "./scripts/build.sh --external:react --external:react-dom",
-    "clean": "rimraf ./dist"
+    "prepack": "tsc --build"
   },
   "peerDependencies": {
     "react": "^16 || ^17 || ^18"
   },
   "devDependencies": {
-    "esbuild": "^0.17.8",
-    "react": "^18.0.0",
-    "rimraf": "^3.0.2",
-    "tslib": "^2.3.1"
+    "react": "^18.0.0"
   },
   "dependencies": {
     "classnames": "^2.3.2",
