--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -1,12 +1,18 @@
 {
   "compilerOptions": {
-    "target": "es2019",
-    "module": "es2015",
-    "moduleResolution": "node",
-    "lib": ["es2019", "dom"],
+    "lib": ["esnext", "dom"],
+    "module": "node16",
+    "target": "es2021",
+    "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
+    "incremental": true,
+    "outDir": "dist/",
+    "strict": true,
+    "isolatedModules": true,
+    "skipLibCheck": true,
     "experimentalDecorators": true,
-    "useDefineForClassFields": false
+    "useDefineForClassFields": false,
+    "plugins": [{ "name": "ts-lit-plugin" }]
   }
 }
