Start work on headless React component

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "markprompt",
   "private": true,
   "workspaces": [
+    "examples/*",
     "packages/*"
   ],
   "scripts": {
@@ -25,5 +26,11 @@
     "prettier": "^2.8.0",
     "prettier-plugin-packagejson": "^2.0.0",
     "typescript": "^5.0.0"
+  },
+  "overrides": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11"
   }
 }
