--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -4,24 +4,24 @@
   "description": "A React component for adding GPT-4 powered search using the Markprompt API.",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/motifland/markprompt-js.git",
+    "url": "git+https://github.com/motifland/markprompt.git",
     "directory": "packages/react"
   },
   "license": "MIT",
   "sideEffects": false,
   "type": "module",
   "exports": "./dist/index.js",
-  "main": "dist/index.cjs",
-  "module": "dist/markprompt.esm.js",
-  "typings": "dist/index.d.ts",
   "files": [
     "README.md",
     "dist"
   ],
   "scripts": {
+    "build": "tsc --build",
+    "dev": "tsc --build --watch",
     "prepack": "tsc --build"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.3",
     "classnames": "^2.3.2",
     "client-only": "^0.0.1",
     "react-markdown": "^8.0.6",
