--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -7,12 +7,13 @@
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
-    "rootDir": "src",
+    "rootDir": "./src",
     "strict": true,
     "jsx": "react",
     "outDir": "dist",
     "skipLibCheck": true,
     "target": "es2021",
     "isolatedModules": true
-  }
+  },
+  "exclude": ["dist/", "examples/*"]
 }
