--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "lint:js": "eslint . --quiet",
     "lint:ts": "tsc"
   },
+  "overrides": {
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
+  },
   "dependencies": {
     "@markdoc/markdoc": "^0.2.2",
     "@markdoc/next.js": "^0.2.2",
@@ -78,8 +84,8 @@
     "p-limit": "^4.0.0",
     "pako": "^2.1.0",
     "prism-react-renderer": "^1.3.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.0",
     "react-markdown": "^8.0.5",
@@ -105,8 +111,8 @@
     "@types/ms": "0.7.31",
     "@types/node": "18.14.6",
     "@types/pako": "^2.0.0",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@types/turndown": "^5.0.1",
     "@types/unzipper": "^0.10.5",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
