--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint:ts": "npx --workspaces tsc --noEmit"
   },
   "dependencies": {
+    "@changesets/changelog-github": "^0.4.0",
+    "@changesets/cli": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "eslint": "8.35.0",
