--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@typescript-eslint/parser": "^5.57.1",
     "eslint": "8.35.0",
     "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-config-prettier": "^8.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-lit": "^1.8.2",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-wc": "^1.4.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "2.8.1",
+    "prettier": "^2.8.0",
     "typescript": "^5.0.0"
   }
 }
