Fix TypeScript configuration

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "run-p lint:format lint:js lint:ts",
     "lint:format": "prettier --check .",
     "lint:js": "eslint . --quiet",
-    "lint:ts": "npx --workspaces tsc --noEmit"
+    "lint:ts": "npx --workspaces tsc"
   },
   "dependencies": {
     "@changesets/changelog-github": "^0.4.0",
@@ -16,7 +16,6 @@
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "eslint": "8.35.0",
-    "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-config-prettier": "^8.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-lit": "^1.8.2",
