--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -1,14 +1,14 @@
 {
+  "include": ["src"],
+  "references": [{ "path": "../core" }],
   "compilerOptions": {
+    "composite": true,
     "module": "node16",
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
-    "rootDir": "./src",
+    "rootDir": "src",
     "strict": true,
-    "paths": {
-      "@markprompt/*": ["../*/src"]
-    },
     "jsx": "react-jsx",
     "outDir": "dist",
     "skipLibCheck": true,
