--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@markprompt/web",
-  "version": "0.3.1-beta4",
+  "version": "0.3.2-beta3",
   "description": "A web component for adding GPT-4 powered search using the Markprompt API.",
   "author": "Motif",
   "main": "dist/index.js",
@@ -26,7 +26,7 @@
     "vite": "vite"
   },
   "dependencies": {
-    "@markprompt/core": "^0.3.2",
+    "@markprompt/core": "0.4.1",
     "lit": "^2.7.2",
     "rehype-sanitize": "^5.0.1",
     "rehype-stringify": "^9.0.3",
