--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-wc": "^1.4.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.0",
+    "prettier-plugin-packagejson": "^2.0.0",
     "typescript": "^5.0.0"
   }
 }
