--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "typescript": "^5.0.0"
   },
   "overrides": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11"
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0"
   }
 }
