--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -21,12 +21,10 @@
     "prepack": "tsc --build --clean && tsc --build"
   },
   "dependencies": {
+    "@markprompt/core": "0.4.2",
     "@radix-ui/react-dialog": "^1.0.3",
     "react-markdown": "^8.0.7",
     "remark-gfm": "^3.0.1"
-  },
-  "devDependencies": {
-    "react": "^18.0.0"
   },
   "peerDependencies": {
     "react": "^16 || ^17 || ^18"
