--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -9,7 +9,7 @@
     "sourceMap": true,
     "rootDir": "src",
     "strict": true,
-    "jsx": "react-jsx",
+    "jsx": "react",
     "outDir": "dist",
     "skipLibCheck": true,
     "target": "es2021",
