--- a/examples/with-tailwind/package.json
+++ b/examples/with-tailwind/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react-swc": "^3.0.0",
+    "tailwindcss": "^3.0.0",
     "vite": "^4.2.0"
   }
 }
