--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@changesets/cli": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
+    "esbuild": "^0.17.18",
     "eslint": "8.35.0",
     "eslint-config-prettier": "^8.0.0",
     "eslint-plugin-import": "^2.27.5",
