--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@markprompt/react",
-  "version": "0.3.0",
+  "version": "1.0.0",
   "description": "A React component for adding GPT-4 powered search using the Markprompt API.",
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   "scripts": {
     "build": "tsc --build",
     "dev": "tsc --build --watch",
+    "dev-pack": "npm pack; mv markprompt-react-0.3.0.tgz ../../examples/with-css-modules/",
     "prepack": "tsc --build"
   },
   "dependencies": {
