React component updates

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -16,8 +16,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc --build",
-    "dev": "tsc --build --watch",
-    "prepack": "tsc --build"
+    "build": "tsc --build --clean && tsc --build",
+    "dev": "tsc --build --clean && tsc --build --watch",
+    "prepack": "tsc --build --clean && tsc --build"
   }
 }
