--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "packages/*"
   ],
   "scripts": {
+    "build-all-dev": "rm -fr node_modules; npm install; pushd packages/core; npm run build; popd; pushd packages/react; npm run dev-pack; popd; pushd examples/with-css-modules; rm -fr node_modules; npm run dev",
     "lint": "run-p lint:format lint:js lint:ts",
     "lint:format": "prettier --check .",
     "lint:js": "eslint . --quiet",
