--- a/examples/with-css-modules/package.json
+++ b/examples/with-css-modules/package.json
@@ -6,11 +6,10 @@
   "scripts": {
     "build": "tsc && vite build",
     "dev": "vite",
-    "dev-install": "rm -fr ../../node_modules; pushd ../..; npm install; popd; rm -fr node_modules; npm install",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@markprompt/react": "file:./markprompt-react-1.0.2.tgz",
+    "@markprompt/react": "*",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-visually-hidden": "^1.0.2",
