Enable verbatimModuleSyntax option

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -13,7 +13,8 @@
     "outDir": "dist",
     "skipLibCheck": true,
     "target": "es2021",
-    "isolatedModules": true
+    "isolatedModules": true,
+    "verbatimModuleSyntax": true
   },
   "exclude": ["dist/", "examples/*"]
 }
