--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -11,6 +11,7 @@
     "outDir": "dist/",
     "strict": true,
     "isolatedModules": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "verbatimModuleSyntax": true
   }
 }
