--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -14,6 +14,7 @@
     "skipLibCheck": true,
     "experimentalDecorators": true,
     "useDefineForClassFields": false,
+    "verbatimModuleSyntax": true,
     "plugins": [{ "name": "ts-lit-plugin" }]
   }
 }
