--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@markprompt/react",
-  "version": "1.0.2",
+  "version": "0.3.0",
   "description": "A headless React component for adding GPT-4 powered search using the Markprompt API.",
   "repository": {
     "type": "git",
@@ -25,7 +25,9 @@
     "@radix-ui/react-dialog": "^1.0.3",
     "classnames": "^2.3.2",
     "client-only": "^0.0.1",
-    "react-markdown": "^8.0.6",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "react-remark": "^2.1.0",
     "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
