--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,4 +15,5 @@ jobs:
           node-version: 18
           cache: npm
       - run: npm ci
+      - run: npm run build --workspaces
       - run: npm run lint
