--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -26,7 +26,7 @@
     "client-only": "^0.0.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "react-remark": "^2.1.0",
+    "react-markdown": "^8.0.7",
     "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
