--- a/examples/with-css-modules/package.json
+++ b/examples/with-css-modules/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-visually-hidden": "^1.0.2",
+    "clsx": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
