Start work on cleaning up the web component and add init script

--- a/examples/with-web-component/package.json
+++ b/examples/with-web-component/package.json
@@ -8,6 +8,9 @@
     "dev": "vite",
     "preview": "vite preview"
   },
+  "dependencies": {
+    "@markprompt/web": "*"
+  },
   "devDependencies": {
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
