--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -10,7 +10,10 @@
   "license": "MIT",
   "author": "Motif",
   "type": "module",
-  "exports": "./dist/index.js",
+  "exports": {
+    ".": "./dist/index.js",
+    "./init": "./dist/init.js"
+  },
   "main": "dist/index.js",
   "files": [
     "README.md",
@@ -24,6 +27,7 @@
   },
   "dependencies": {
     "@markprompt/core": "0.4.2",
+    "@lit-labs/context": "^0.3.1",
     "lit": "^2.7.2",
     "rehype-sanitize": "^5.0.1",
     "rehype-stringify": "^9.0.3",
