--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-lit": "^1.8.2",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-wc": "^1.4.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.0",
