--- a/package.json
+++ b/package.json
@@ -16,15 +16,13 @@
     "@changesets/cli": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
-    "eslint": "8.35.0",
+    "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.0.0",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-lit": "^1.8.2",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-wc": "^1.4.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.0",
     "prettier-plugin-packagejson": "^2.0.0",
