--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -29,8 +29,8 @@
     "@lit-labs/context": "^0.3.1",
     "@markprompt/core": "0.4.3",
     "lit": "^2.7.2",
+    "rehype-dom-stringify": "^3.0.1",
     "rehype-sanitize": "^5.0.1",
-    "rehype-stringify": "^9.0.3",
     "remark-gfm": "^3.0.1",
     "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0",
