Set changeset option updateInternalDependencies

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -6,5 +6,6 @@
   ],
   "commit": false,
   "access": "public",
-  "baseBranch": "main"
+  "baseBranch": "main",
+  "updateInternalDependencies": "patch"
 }
