Set privatePackages false for changesets
We don’t want to version those.

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,11 +1,12 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@2.3.0/schema.json",
+  "access": "public",
+  "baseBranch": "main",
   "changelog": [
     "@changesets/changelog-github",
     { "repo": "motifland/markprompt-js" }
   ],
   "commit": false,
-  "access": "public",
-  "baseBranch": "main",
+  "privatePackages": false,
   "updateInternalDependencies": "patch"
 }
