Add tests for @markprompt/react

--- a/examples/with-css-modules/tsconfig.json
+++ b/examples/with-css-modules/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "references": [{ "path": "../../packages/react" }],
   "compilerOptions": {
     "target": "es2021",
     "skipLibCheck": true,
