--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -26,6 +26,12 @@
     "react-markdown": "^8.0.7",
     "remark-gfm": "^3.0.1"
   },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.0.0",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/react-hooks": "^8.0.0",
+    "jsdom": "^22.0.0"
+  },
   "peerDependencies": {
     "react": "^16 || ^17 || ^18"
   },
