--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -1,20 +1,24 @@
 {
-  "references": [{ "path": "../core" }],
+  "$schema": "http://json.schemastore.org/tsconfig",
+  "references": [{ "path": "../core" }, { "path": "../react" }],
   "compilerOptions": {
     "module": "node16",
-    "rootDir": "src",
-    "target": "es2021",
+    "target": "esnext",
     "sourceMap": true,
+    "emitDeclarationOnly": true,
     "declaration": true,
     "declarationMap": true,
     "incremental": true,
-    "outDir": "dist/",
     "strict": true,
     "isolatedModules": true,
     "skipLibCheck": true,
-    "experimentalDecorators": true,
-    "useDefineForClassFields": false,
     "verbatimModuleSyntax": true,
-    "plugins": [{ "name": "ts-lit-plugin" }]
+    "jsx": "react",
+    "outDir": "dist/",
+    "baseUrl": ".",
+    "paths": {
+      "react": ["node_modules/preact/compat/"],
+      "react-dom": ["node_modules/preact/compat/"]
+    }
   }
 }
