--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "run-p lint:format lint:js lint:ts",
     "lint:format": "prettier --check .",
     "lint:js": "eslint . --quiet",
-    "lint:ts": "npx --workspaces tsc"
+    "lint:ts": "npx --workspaces tsc",
+    "test": "vitest run --coverage"
   },
   "dependencies": {
     "@changesets/changelog-github": "^0.4.0",
     "@changesets/cli": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
+    "@vitest/coverage-c8": "^0.31.0",
     "eslint": "8.35.0",
     "eslint-config-prettier": "^8.0.0",
     "eslint-import-resolver-typescript": "^3.5.5",
@@ -25,10 +27,12 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-wc": "^1.4.0",
+    "msw": "^1.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.0",
     "prettier-plugin-packagejson": "^2.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vitest": "^0.31.0"
   },
   "overrides": {
     "react": "^17.0.0",
