Don't include test files in compilation

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -13,5 +13,7 @@
     "isolatedModules": true,
     "skipLibCheck": true,
     "verbatimModuleSyntax": true
-  }
+  },
+  "include": ["src/*"],
+  "exclude": ["*.test.ts"]
 }
