Export `useMarkpromptContext` hook from `@markprompt/react`

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -16,5 +16,5 @@
     "isolatedModules": true,
     "verbatimModuleSyntax": true
   },
-  "exclude": ["dist/", "examples/*"]
+  "exclude": ["dist/", "examples/*", "*.test.ts"]
 }
