Don't emit on TS linting

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "run-p lint:format lint:js lint:ts",
     "lint:format": "prettier --check .",
     "lint:js": "eslint . --quiet",
-    "lint:ts": "npx --workspaces tsc",
+    "lint:ts": "npx --workspaces tsc --noEmit",
     "test": "vitest run --coverage"
   },
   "dependencies": {
