--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "run-p lint:format lint:js lint:ts",
     "lint:format": "prettier --check .",
     "lint:js": "eslint . --quiet",
-    "lint:ts": "npx --workspaces tsc --noEmit",
+    "lint:ts": "npx --workspaces path-exists tsconfig.json && tsc --noEmit || echo 'No tsconfig.json found, skipping TypeScript linting'",
     "test": "vitest run --coverage"
   },
   "dependencies": {
@@ -31,6 +31,9 @@
     "prettier-plugin-packagejson": "^2.0.0",
     "typescript": "^5.0.0",
     "vitest": "^0.31.0"
+  },
+  "devDependencies": {
+    "path-exists-cli": "^2.0.0"
   },
   "overrides": {
     "react": "^17.0.0",
