Make sure scrollTo exists on Element

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src", "vitest.setup.ts"],
+  "include": ["src/"],
   "references": [{ "path": "../core" }],
   "compilerOptions": {
     "composite": true,
