Add test.tsx files to exclude

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -16,5 +16,11 @@
     "isolatedModules": true,
     "verbatimModuleSyntax": true
   },
-  "exclude": ["dist/", "examples/*", "*.test.ts", "vitest.setup.ts"]
+  "exclude": [
+    "dist/",
+    "examples/*",
+    "*.test.ts",
+    "*.test.tsx",
+    "vitest.setup.ts"
+  ]
 }
