--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -3,13 +3,10 @@
   "version": "0.0.0",
   "description": "Common CSS for Markprompt components",
   "license": "MIT",
-  "type": "module",
-  "exports": "./markprompt.css",
   "main": "markprompt.css",
+  "types": "./index.d.ts",
   "files": [
-    "markprompt.css"
-  ],
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  }
+    "markprompt.css",
+    "index.d.ts"
+  ]
 }
