--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -26,10 +26,10 @@
     "prepack": "node scripts/build.js"
   },
   "dependencies": {
-    "@markprompt/core": "^0.4.5"
+    "@markprompt/core": "0.4.5"
   },
   "devDependencies": {
-    "@markprompt/react": "^0.3.5",
+    "@markprompt/react": "0.3.5",
     "@radix-ui/react-accessible-icon": "^1.0.2",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
