Add global and types to files

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -16,8 +16,10 @@
   },
   "main": "dist/index.js",
   "files": [
+    "dist/global.*",
     "dist/index.*",
-    "dist/init.*"
+    "dist/init.*",
+    "dist/types.*"
   ],
   "scripts": {
     "analyze": "node scripts/analyze.js",
