Reuse `@markprompt/react` in `@markprompt/web` (#18)
* Remove unused options

* Add `@markprompt/css`

* Remove unused options

* Update `@markprompt/react`

- allow users to pass any props that `@radix-ui/react-dialog` accepts
- allow users to attach refs where possible
- allow users to override all defaults
- wrap all functions in useCallback
- remove unused options
- augment forwardRef with generics
- remove extraneous container from AutoScroller

* Update `@markprompt/web`

- we now use `@markprompt/react` to avoid duplicate effort, replacing React with Preact in a build step
- exports a `markprompt(...)` function for initializing markprompt

* Add with-markprompt-web example

* Update with-css-modules example

* Accessibility and CSS improvements

* Show caret during preload

* Add label to Prompt and conditional visual hide to Title/Description

* Move ConditionalWrap and label to `@markprompt/react`

* Update examples with mobile best practice

* Update README

* Update README

* Add init script

* Add LICENSE to @markprompt/css

* Publish LICENSE to npm

* Add proper JSDoc @default tags to MarkpromptOptions,

* Support showing/hiding branding

* Remove unused icon

* Add init script export

* Import named exports

* Replace rollup with esbuild

* Remove extraneous `files` from `package.json`'s

* Move deps to devDeps and add analyze script

* Add some docs to esbuild config

* Don't include test files in compilation

* Export `useMarkpromptContext` hook from `@markprompt/react`

* Remove example .gitignore

* Update package.json

* Remove unused type declaration file

* Update documentation link

* Add changesets

* Add vitest.config.js

* Forgotten merge conflict

* Use useMarkpromptContext in with-css-modules

* Update docusaurus-theme-search

* Add changeset

* Don't emit on TS linting

* Check if tsconfig exists

* Fix lint:ts

* Make sure scrollTo exists on Elem

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src"],
+  "include": ["src/"],
   "references": [{ "path": "../core" }],
   "compilerOptions": {
     "composite": true,
@@ -15,6 +15,5 @@
     "target": "es2021",
     "isolatedModules": true,
     "verbatimModuleSyntax": true
-  },
-  "exclude": ["dist/", "examples/*"]
+  }
 }
