--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "run-p lint:format lint:js lint:ts",
     "lint:format": "prettier --check .",
     "lint:js": "eslint . --quiet",
-    "lint:ts": "npx --workspaces tsc",
+    "lint:ts": "npm --workspaces pack",
     "test": "vitest run --coverage"
   },
   "dependencies": {
@@ -22,17 +22,18 @@
     "eslint-config-prettier": "^8.0.0",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-lit": "^1.8.2",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-wc": "^1.4.0",
     "msw": "^1.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.0",
     "prettier-plugin-packagejson": "^2.0.0",
     "typescript": "^5.0.0",
     "vitest": "^0.31.0"
+  },
+  "devDependencies": {
+    "path-exists-cli": "^2.0.0"
   },
   "overrides": {
     "react": "^17.0.0",
