--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -12,7 +12,6 @@
   "type": "module",
   "exports": "./dist/index.js",
   "files": [
-    "README.md",
     "dist"
   ],
   "scripts": {
@@ -23,7 +22,9 @@
   "dependencies": {
     "@markprompt/core": "^0.4.5",
     "@radix-ui/react-dialog": "^1.0.3",
+    "@radix-ui/react-visually-hidden": "^1.0.2",
     "react-markdown": "^8.0.7",
+    "react-merge-refs": "^2.0.2",
     "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
