--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -1,20 +1,27 @@
 {
-  "references": [{ "path": "../core" }],
+  "$schema": "http://json.schemastore.org/tsconfig",
+  "references": [{ "path": "../core" }, { "path": "../react" }],
+  "include": ["src/*"],
   "compilerOptions": {
+    "checkJs": true,
     "module": "node16",
-    "rootDir": "src",
-    "target": "es2021",
+    "target": "esnext",
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
     "incremental": true,
-    "outDir": "dist/",
+    "emitDeclarationOnly": true,
+    "composite": true,
     "strict": true,
     "isolatedModules": true,
     "skipLibCheck": true,
-    "experimentalDecorators": true,
-    "useDefineForClassFields": false,
     "verbatimModuleSyntax": true,
-    "plugins": [{ "name": "ts-lit-plugin" }]
+    "jsx": "react",
+    "outDir": "dist/",
+    "rootDir": "./src",
+    "paths": {
+      "react": ["./node_modules/preact/compat/"],
+      "react-dom": ["./node_modules/preact/compat/"]
+    }
   }
 }
