--- a/examples/with-docusaurus/package.json
+++ b/examples/with-docusaurus/package.json
@@ -30,7 +30,7 @@
     "@docusaurus/core": "^2.4.0",
     "@docusaurus/module-type-aliases": "^2.4.0",
     "@docusaurus/preset-classic": "^2.4.0",
-    "@markprompt/docusaurus-theme-search": "^0.1.0",
+    "@markprompt/docusaurus-theme-search": "*",
     "@mdx-js/react": "^1.6.22",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
