--- a/examples/with-css-modules/package.json
+++ b/examples/with-css-modules/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@markprompt/react": "*",
+    "@markprompt/react": "0.3.5",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-visually-hidden": "^1.0.2",
