--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -11,6 +11,7 @@
   "sideEffects": false,
   "type": "module",
   "exports": "./dist/index.js",
+  "main": "./dist/index.js",
   "files": [
     "dist"
   ],
