--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,5 +24,5 @@ jobs:
         with:
           version: npm run release
           publish: |
-            npm pack --workspaces &&
+            npm --workspaces pack &&
             npx changeset publish
