--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
           cache: npm
       - run: npm ci
       - run: npm run build -w @markprompt/core -w @markprompt/react -w @markprompt/web
-      - run: npm run build -w with-css-modules -w with-docusaurus -w with-markprompt-web
+      - run: npm run build -w with-css-modules -w with-docusaurus -w with-next -w with-markprompt-web
       - run: npm run lint
 
   test:
