--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint:ts": "npm run build",
     "publish": "npm run build && changeset publish",
     "test": "vitest run --coverage",
-    "version": "changeset version && npm install"
+    "version": "changeset version && npm install",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@changesets/changelog-github": "^0.4.0",
@@ -36,7 +37,8 @@
     "vitest": "^0.31.0"
   },
   "devDependencies": {
-    "path-exists-cli": "^2.0.0"
+    "path-exists-cli": "^2.0.0",
+    "husky": "^8.0.0"
   },
   "overrides": {
     "react": "^17.0.0",
