--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   ],
   "scripts": {
     "build": "npm pack --workspaces",
-    "lint": "run-p lint:format lint:js lint:ts",
+    "lint": "run-p lint:css lint:format lint:js lint:ts",
+    "lint:css": "npx stylelint \"**/*.css\"",
     "lint:format": "prettier --check .",
     "lint:js": "eslint . --quiet",
     "lint:ts": "npm run build",
@@ -38,7 +39,9 @@
   },
   "devDependencies": {
     "husky": "^8.0.0",
-    "path-exists-cli": "^2.0.0"
+    "path-exists-cli": "^2.0.0",
+    "stylelint": "^15.6.2",
+    "stylelint-config-standard": "^33.0.0"
   },
   "overrides": {
     "react": "^17.0.0",
