--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   ],
   "scripts": {
     "build": "npm pack --workspaces",
-    "lint": "run-p lint:format lint:js lint:ts",
+    "lint": "run-p lint:format lint:js lint:md lint:ts",
     "lint:format": "prettier --check .",
     "lint:js": "eslint . --quiet",
+    "lint:md": "remark . --frail",
     "lint:ts": "npm run build",
     "prepare": "husky install",
     "publish": "npm run build && changeset publish",
@@ -33,7 +34,13 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.0",
     "prettier-plugin-packagejson": "^2.0.0",
+    "remark-cli": "^11.0.0",
+    "remark-frontmatter": "^4.0.0",
+    "remark-prettier": "^2.0.0",
+    "remark-toc": "^8.0.0",
+    "remark-validate-links": "^12.0.0",
     "typescript": "^5.0.0",
+    "unified-consistency": "^1.0.0",
     "vitest": "^0.31.0"
   },
   "devDependencies": {
